--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -41,9 +41,9 @@
       </li>
   
       <li class="nav-item">
-        <a class="nav-link cursor">
+        <a class="nav-link cursor" (click)="logout()">
           <i class="menu-icon fa fa-sign-out-alt"></i>
-          <span class="menu-title" routerLink="/login">Cerrar sesión</span>
+          <span class="menu-title">Cerrar sesión</span>
         </a>
       </li>
       
