--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -48,9 +48,23 @@
                   </div>
                 </div>
               </div>
-
               <div class="form-group">
-                <button   [disabled]="formRegister.invalid" type="submit" class="btn btn-primary submit-btn btn-block">Crear cuenta</button>
+                <button 
+                  type="submit"
+                  [disabled]="formRegister.invalid"
+                  class="btn btn-primary submit-btn btn-block"
+                  *ngIf="!isLoading">
+                  Crear cuenta
+                </button>
+
+                <button 
+                  type="button"
+                  [disabled]="true"
+                  class="btn btn-primary submit-btn btn-block"
+                  *ngIf="isLoading">
+                  <i class="fa fa-spin fa-sync"></i>
+                  Espere...
+                </button>
               </div>
               <div class="text-block text-center my-3">
                 <span class="text-small font-weight-semibold">ya tienes una cuenta?</span>
